<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iutLogoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_iut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/logo_iutvalence_2020_rvb" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="5"
        android:scaleY="5"
        android:text="@string/titre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iutLogoView"
        app:layout_constraintStart_toStartOf="@+id/iutLogoView"
        app:layout_constraintTop_toBottomOf="@+id/iutLogoView"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/swapClassicMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goClassic"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/swapClassicMode"
        app:backgroundTint="#FFFF7A06"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/swapInfernalMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goInfernal"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/swapInfernalMode"
        app:backgroundTint="#FFFF7A06"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/swapClassicMode"
        app:layout_constraintStart_toStartOf="@+id/swapClassicMode"
        app:layout_constraintTop_toBottomOf="@+id/swapClassicMode"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/swapSpeedMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/swapSpeedMode"
        app:backgroundTint="#FFFF7A06"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/swapInfernalMode"
        app:layout_constraintStart_toStartOf="@+id/swapInfernalMode"
        app:layout_constraintTop_toBottomOf="@+id/swapInfernalMode"
        app:layout_constraintVertical_bias="0.19999999" />
</androidx.constraintlayout.widget.ConstraintLayout>